modules/gdscript/tests/scripts/analyzer/errors/utility_functions.gd
func test():
	print(floor(Color())) # Built-in utility function.
	print(len(Color())) # GDScript utility function.
